@@ -2,7 +2,6 @@ package org.java.programs;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class StreamsFilter {
 
@@ -16,12 +15,14 @@ public class StreamsFilter {
 
         Student student3 = new Student(1, "Shivam", 78f);
 
-        List<Student> list = new ArrayList<Student>();
+        List<Student> list = new ArrayList<>();
         list.add(student1);
         list.add(student2);
         list.add(student3);
 
-        List<Student> list60 = list.stream().filter(student -> student.getMarks() > 60).collect(Collectors.toList());
+        List<Student> list60 = list.stream().filter(student -> student.getMarks() > 60).toList();
         System.out.println("list60 = " + list60);
+
+        List<Student> listanotyher = list.stream().filter(student ->student.getMarks()>=30).toList();
     }
 }
